testdata/baselines/reference/compiler/quantifiedTypesBasic.errors.txt
quantifiedTypesBasic.ts(8,5): error TS2322: Type '{ values: ({ key: string; } | { key: number; })[]; identifier: (v: { key: string; } | { key: number; }) => string | number; }' is not assignable to type '{ values: ({ key: string; } | { key: number; })[]; identifier: (value: { key: string; } | { key: number; }) => string; }'.
  The types returned by 'identifier(...)' are incompatible between these types.
    Type 'string | number' is not assignable to type 'string'.
      Type 'number' is not assignable to type 'string'.


==== quantifiedTypesBasic.ts (1 errors) ====
    let t0: <T> T = "hello"
    
    let t1: <T> { values: T[], identifier: (value: T) => string } = {
      values: [{ key: "a" }, { key: "b" }, { key: "c" }],
      identifier: v => v.key
    }
    
    let t2: <T> { values: T[], identifier: (value: T) => string } = {
        ~~
!!! error TS2322: Type '{ values: ({ key: string; } | { key: number; })[]; identifier: (v: { key: string; } | { key: number; }) => string | number; }' is not assignable to type '{ values: ({ key: string; } | { key: number; })[]; identifier: (value: { key: string; } | { key: number; }) => string; }'.
!!! error TS2322:   The types returned by 'identifier(...)' are incompatible between these types.
!!! error TS2322:     Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
      values: [{ key: "a" }, { key: "b" }, { key: 0 }],
      identifier: v => v.key
    }
    